--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+a {
+  text-decoration: none; }
+
 .img-circle {
   border-radius: 50%; }
 
@@ -41,5 +44,13 @@
         padding-left: 5px; }
         #home .layer .links li a {
           color: #FFFFFF; }
+    #home .layer .more {
+      text-align: center;
+      margin-top: 2em;
+      font-size: 40px; }
+      #home .layer .more a {
+        color: #FFFFFF;
+        height: 20px;
+        width: 20px; }
 
 /*# sourceMappingURL=style.css.map */
