--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,10 @@ $primary-text-color:   #212121;
 $secondary-text-color: #757575;
 $divider-color:        #BDBDBD;
 $white:                #FFFFFF;
+a{
+    text-decoration: none;
+    
+}
 .img-circle{
     border-radius: 50%;
 }
@@ -57,6 +61,20 @@ $white:                #FFFFFF;
                     color: $white;
                 }
             }
+        }
+        .more{
+            text-align: center;
+            margin-top: 2em;
+            font-size: 40px;
+            
+            a{
+                color: $white;
+                height: 20px;
+                width: 20px;
+                
+            }
+
+
         }
     }
 }
